Giraph Change Log

Release 0.2.0 - unreleased

  GIRAPH-358: Rename package format->io in giraph-formats-contrib for
  consistency with main package. (apresta via aching)

  GIRAPH-350: HBaseVertex i/o formats are not being injected with
  Configuration via Configurable interface. (bfem via aching)

  GIRAPH-356: Improve ZooKeeper issues. (aching)

  GIRAPH-342: Recursive ZooKeeper calls should call progress, dynamic 
  ZooKeeper can skip delete (aching via majakabiljo)

  GIRAPH-351: Fail job early when there is no input (aching via ereisman)

  GIRAPH-212: Security is busted since GIRAPH-168. (ekoontz via
  aching)

  GIRAPH-315: giraph-site.xml isn't read on time. (majakabiljo via
  aching)

  GIRAPH-325: One more progress call. (majakabiljo via aching)

  GIRAPH-328: Outgoing messages from current superstep should be
  grouped at the sender by owning worker, not by partition. (Eli
  Reisman via aching)

  GIRAPH-293: Should aggregators be checkpointed? (majakabiljo via
  aching)

  GIRAPH-355: Partition.readFields crashes. (maja via aching)

  GIRAPH-354: Giraph Formats should use hcatalog-core. (nitayj via
  aching)

  GIRAPH-353: Received metrics are not thread-safe (aching via ereisman)

  GIRAPH-326: Writing input splits to ZooKeeper in parallel (maja)

  GIRAPH-335: Add committer information for Maja Kabiljo to pom.xml
  (maja)

  GIRAPH-341: Improved log messages (timing) and upgraded junit to 4.8
  for better tests. (aching)
  
  GIRAPH-352: Loaded vertices don't have their configuration set.
  (aching)
  
  GIRAPH-343: Use published hcatalog jars. (nitayj via aching)

  GIRAPH-338: More Rat Ignores (Nitay Joffe via ereisman)

  GIRAPH-347: GiraphConfiguration broke hcatalog build
  (Nitay Joffe via ereisman)

  GIRAPH-340: Added client/server ExecutionHandlers to Netty to avoid
  and added WrappedAdaptiveReceiveBufferSizePredictorFactory to
  debug/predict the size of the incoming messages. (aching)
